--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Unit Convertor</title>
 </head>
 <body>
-    Unit Convertor App
+    <div id="unit-convertor">
+
+        <div class="section-1">
+            <h2 class="heading">Metric/Imperial Unit Conversion</h2>
+            <input type="number" class="user-input"user-input">
+            <button class="convert-button">Convert</button>
+        </div>
+
+        <div class="section-2">
+            <div class="length-section">
+                <h4>Length (Meter/Feet)</h4>
+                <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+            </div>
+            <div class="volume-section">
+                <h4>Volume (Litre/Gallons)</h4>
+                <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+            </div>
+            <div class="mass-section">
+                <h4>Length (Kilograms/Pounds)</h4>
+                <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+            </div>
+        </div>
+
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
