--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="section-2">
             <div class="length-section">
                 <h4>Length (Meter/Feet)</h4>
-                <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <!-- <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p> -->
             </div>
             <div class="volume-section">
                 <h4>Volume (Litre/Gallons)</h4>
-                <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <!-- <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p> -->
             </div>
             <div class="mass-section">
                 <h4>Length (Kilograms/Pounds)</h4>
-                <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <!-- <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p> -->
             </div>
         </div>
 
