--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <div class="section-1">
             <h2 class="heading">Metric/Imperial Unit Conversion</h2>
-            <input type="number" class="user-input"user-input">
+            <input type="number" class="user-input" autofocus>
             <button class="convert-button">Convert</button>
         </div>
 
