--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <!-- <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p> -->
             </div>
             <div class="volume-section">
-                <h4>Volume (Litre/Gallons)</h4>
+                <h4>Volume (Liters/Gallons)</h4>
                 <!-- <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p> -->
             </div>
             <div class="mass-section">
